implement exceptions, test basement, initialize lists